fix: border contrast issues

--- a/app/src/index.css
+++ b/app/src/index.css
@@ -15,7 +15,7 @@ html {
 }
 
 body {
-	--at-apply: h-full max-h-[100vh] bg-background-secondary;
+	--at-apply: h-full max-h-[100vh] bg-background-main;
 }
 
 #root {
